--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -59,18 +59,18 @@
         height: 45rem; /* Sabit bir yükseklik belirle */
         object-fit: cover;
         &-1{
-            background-image: url("../../assets/images/+\ 50\ Takipçi.png");
+            background-image: url("../../assets/images/50takip.png");
             
 
 
         }
         &-2{
-            background-image: url("../../assets/images/+\ 100\ Takipçi.png");
+            background-image: url("../../assets/images/100takip.png");
             
 
         }
         &-3{
-            background-image: url("../../assets/images/+\ 200\ Takipçi.png");
+            background-image: url("../../assets/images/200takip.png");
             
 
         }
