--- a/css/style.css
+++ b/css/style.css
@@ -266,13 +266,13 @@ body {
   object-fit: cover;
 }
 .card-picture-1 {
-  background-image: url("../../assets/images/+ 50 Takipçi.png");
+  background-image: url("../../assets/images/50takip.png");
 }
 .card-picture-2 {
-  background-image: url("../../assets/images/+ 100 Takipçi.png");
+  background-image: url("../../assets/images/100takip.png");
 }
 .card-picture-3 {
-  background-image: url("../../assets/images/+ 200 Takipçi.png");
+  background-image: url("../../assets/images/200takip.png");
 }
 
 ul.card-list {
