--- a/css/style.css
+++ b/css/style.css
@@ -376,12 +376,23 @@ body {
   padding: 20px;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (width: 430px) and (height: 932px) {
   .container {
     padding: 10px;
   }
   h1 {
     font-size: 24px;
+  }
+  p {
+    font-size: 14px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .container {
+    padding: 10px;
+  }
+  h1 {
+    font-size: 22px;
   }
   p {
     font-size: 14px;
